--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ hs_err_pid*
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/*
 
 # Gradle
 .idea/**/gradle.xml
@@ -114,3 +115,13 @@ fabric.properties
 .idea/**/markdown-navigator/
 
 # End of https://www.gitignore.io/api/intellij
+
+# Aditional
+.project
+bin/*
+.settings
+BlocksToCommands.iml
+*.jardesec
+
+# MAC
+.DS_Store
