--- a/.gitignore
+++ b/.gitignore
@@ -124,5 +124,10 @@ BlocksToCommands.iml
 exporter.jardesc
 .classpath
 
-# MAC
-.DS_Store
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+*.DS_Store
