cleaned up 1.15.2 code

--- a/1.15.2/src/plugin.yml
+++ b/1.15.2/src/plugin.yml
@@ -5,7 +5,7 @@ version: '5.0.0 Beta'
 author: ILoveAMac
 description: Plugin that allows user to assign commands to blocks. The commands are then run when the block is right-clicked.
 prefix: BTC
-depend: [Vault]
+softdepend: [Vault]
  
 permissions:
   btc.*:
