Added metrics with bStats and cleaned up a few things
Added metrics with bStats and cleaned up a few things

--- a/1.8/src/plugin.yml
+++ b/1.8/src/plugin.yml
@@ -23,6 +23,6 @@ permissions:
 # Commands
 commands:
   btc:
-    description: Main Command For The Blocks To Commands Plugin
+    description: Main Command for BTC
     permission: btc.admin
     usage: /btc help
