--- a/1.8/src/config.yml
+++ b/1.8/src/config.yml
@@ -11,6 +11,11 @@
 
 # By ILoveAMac
 
+# Plugin perms
+# btc.admin -> Give only to admins on server
+# btc.use -> Give to players you want to use BTC blocks
+# custom perms can be assigned to blocks too. If a block has a custom perm, a player needs btc.use and the custom set perm in order to use the block
+
 # These are the messages non-admin players will receive
 # The fundsDeducted and notEnoughFunds message has variables.
 # ${cost} -> Value that was deducted from the payer's account.
@@ -28,9 +33,5 @@ currency: 'dollars'
 # Additional configuration
 options:
   adminShiftRemove: true # When enabled players with the perm btc.admin ac hold shift and break a BTC block to delete it
-  interactSounds: true # Play sounds when players interact with BTC blocks
-
-# Plugin perms
-# btc.admin -> Give only to admins on server
-# btc.use -> Give to players you want to use BTC blocks
-# custom perms can be assigned to blocks too. If a block has a custom perm, a player needs btc.use and the custom set perm in order to use the block
+  interactSounds: true # Play sounds when players interact with BTC blocks # Not implemented
+  metrics: true # collect anonymous data to help improve plugin?
