Added update checker and cleaned up code a bit more

--- a/1.9-1.15.2/src/plugin.yml
+++ b/1.9-1.15.2/src/plugin.yml
@@ -1,7 +1,7 @@
 # Plugin Information
 main: me.ILoveAMac.BTC.Main
 name: Blocks_To_Commands
-version: '5.0.0 Beta'
+version: 'v5.0.0-beta.6'
 author: ILoveAMac
 description: Plugin that allows user to assign commands to blocks. The commands are then run when the block is right-clicked.
 prefix: BTC
